# ml-model-api-template-devops

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
analyse/: 3_modelisation.py  3_modelisation_mlflow.py  3_modelisation_onnx.py  best_reg_lin_produit_recu.onnx
api/: main.py
database_building/: create_table.sql  create_table_prod.sql  create_tables_prod.sh  database_building.py  import_tables_prod.sh
model/: import_data.ipynb  import_data.py  main.sh  utils.py
model/mlruns/0/: meta.yaml
model/mlruns/0/27391033be5c4e07b95e1e2848ac4d13/: meta.yaml
model/mlruns/0/27391033be5c4e07b95e1e2848ac4d13/metrics/: r2  rmse
model/mlruns/0/27391033be5c4e07b95e1e2848ac4d13/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
model/mlruns/0/48d80d29087a4404ac9e2b7420a5e1bc/: meta.yaml
model/mlruns/0/48d80d29087a4404ac9e2b7420a5e1bc/metrics/: r2  rmse
model/mlruns/0/48d80d29087a4404ac9e2b7420a5e1bc/tags/: mlflow.log-model.history  mlflow.runName
model/mlruns/0/edb19c0bbd6744e9b955fac26b61fd80/: meta.yaml
model/mlruns/0/edb19c0bbd6744e9b955fac26b61fd80/metrics/: r2  rmse
model/mlruns/730948033567184221/: meta.yaml
model/mlruns/730948033567184221/044081b2a77346f5a2fc68a2b5f8a48b/: meta.yaml
model/mlruns/mlruns/0/: meta.yaml
model/mlruns/mlruns/453223784642083118/: meta.yaml
model/test/: test_utils_functions.py
sql_queries/: request_customers.sql  request_model.sql
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
(+47 files in other folders)
