[tool.poetry]
name = "ml-model-api-template-devops"
version = "0.1.0"
description = "start package"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
bcrypt = "^4.1.2"
certifi = "^2024.2.2"
click = "^8.1.7"
dnspython = "^2.6.1"
ecdsa = "^0.18.0"
fastapi = "^0.110.0"
email-validator = "^2.1.1"
greenlet = "^3.0.3"
h11 = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
